adds server function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@ body {font-family:georgia;}
 <script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
 
 <script type="text/javascript">
+
+function serverSetup(server,cat){
+   server = server.toLowerCase();
+   let url = "";
+   if(server == "php"){//use web service
+       url = "api.php?cat=" + cat;
+   }else{//server is HTML only - simulate web service
+       if(cat == "box"){//box office
+           url = "data/bond-box-office.js";
+       }else{//year
+           url = "data/bond-year.js"; 
+       }
+   }
+   return url;
+}
+
 $(document).ready(function() {  
 
 	$('.category').click(function(e){
@@ -19,16 +35,25 @@ $(document).ready(function() {
 
 function loadAJAX(cat)
 {
-	//AJAX connection will go here
-    //alert('cat is: ' + cat);
-
-	$.ajax(
-		type:"GET",
-		dataType:"json",
-		url:"api.php?cat=" + cat,
-		success:bondJSON
-	);
+   /* url can be run on a server running PHP or
+      use the a standard HTML server
+ 
+      Indicate below if server is PHP or HTML
+ 
+      let url = serverSetup("php",cat); //setup to run against PHP server
+      let url = serverSetup("html",cat); //setup to run against HTML server
+   */
+  
+   let url = serverSetup("html",cat);
+  
+   $.ajax({
+       type:"GET",
+       dataType: "json",
+       url:url,
+       success:bondJSON
+   });
 }
+
     
 function toConsole(data)
 {//return data to console for JSON examination
