--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@ function toConsole(data)
 
 function bondJSON(data){
 //JSON processing data goes here
+	//toConsole(data);
+	$("#output").text(JSON.stringify(data));
 }
 
 </script>
